<resources>
    <string name="app_name">Poll</string>
    <string name="god">GOD</string>
    <string name="is_user_signed_in">IsUserSignedIn</string>
    <string name="sign_up">Sign up</string>
    <string name="roll_no">Roll No</string>
    <string name="branch">Branch</string>
    <string name="year">Year</string>
    <string name="thumbs_down">ThumbsDown</string>
    <string name="thumbs_up">ThumbsUp</string>
    <string name="open_nav">OpenNav</string>
    <string name="close_nav">CloseNav</string>
    <string name="done">Done</string>
    <string name="is_my_polls">IsMyPolls</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="sign_up_message">Register to get started!</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="new_poll">New poll</string>
    <string name="old_branch">OldBranch</string>
    <string name="old_year">OldYear</string>
    <string name="old_roll_no">OldRollNo</string>
    <string name="registering">Registering…</string>
    <string name="update_text_message">Enter new details</string>
    <string name="no_polls_message">No polls available right now.</string>
    <string-array name="branches">
        <item>Cse</item>
        <item>Ece</item>
        <item>Eee</item>
    </string-array>
    <string-array name="years">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </string-array>
</resources>
