<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/new_poll_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLength="29"
            android:maxLines="1" />

        <EditText
            android:id="@+id/new_poll_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:inputType="textCapSentences"
            android:maxLength="65"
            android:minHeight="56dp" />

        <Spinner
            android:id="@+id/new_poll_year_spinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp" />


        <Spinner
            android:id="@+id/new_poll_branch_spinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/new_poll_done_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:text="@string/done"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
